third_party/move/move-compiler-v2/tests/cmp-rewrite/legal-examples-lang-v2.2/cmp_limited_ability.v2.1.exp
// -- Model dump before first bytecode pipeline
module 0x0::test {
    struct Test {
        a: u8,
        b: u16,
    }
    public fun eq1(x: Test,y: Test): Test {
        if Eq<Test>(x, y) {
          x
        } else {
          y
        }
    }
    public fun eq2(x: Test,y: Test): Test {
        if Eq<Test>(Borrow(Immutable)(x), Borrow(Immutable)(y)) {
          x
        } else {
          y
        }
    }
} // end 0x0::test
module 0x1::test {
    struct Test {
        a: u8,
        b: u16,
    }
    public fun eq1(x: vector<Test>,y: vector<Test>): vector<Test> {
        if Eq<vector<Test>>(x, y) {
          x
        } else {
          y
        }
    }
    public fun eq2(x: vector<Test>,y: vector<Test>): vector<Test> {
        if Eq<vector<Test>>(Borrow(Immutable)(x), Borrow(Immutable)(y)) {
          x
        } else {
          y
        }
    }
} // end 0x1::test

// -- Sourcified model before first bytecode pipeline
module 0x0::test {
    struct Test has drop {
        a: u8,
        b: u16,
    }
    public fun eq1(x: Test, y: Test): Test {
        if (x == y) x else y
    }
    public fun eq2(x: Test, y: Test): Test {
        if (&x == &y) x else y
    }
}
module 0x1::test {
    struct Test has drop {
        a: u8,
        b: u16,
    }
    public fun eq1(x: vector<Test>, y: vector<Test>): vector<Test> {
        if (x == y) x else y
    }
    public fun eq2(x: vector<Test>, y: vector<Test>): vector<Test> {
        if (&x == &y) x else y
    }
}


Diagnostics:
error: local `x` of type `Test` does not have the `copy` ability
   ┌─ tests/cmp-rewrite/legal-examples-lang-v2.2/cmp_limited_ability.move:9:13
   │
 9 │         if (x==y)
   │             ^ copy needed here because value is still in use
10 │             x
   │             - used here

error: local `y` of type `Test` does not have the `copy` ability
   ┌─ tests/cmp-rewrite/legal-examples-lang-v2.2/cmp_limited_ability.move:9:13
   │
 9 │         if (x==y)
   │             ^^^^ copy needed here because value is still in use
   ·
12 │             y
   │             - used here

error: local `x` of type `vector<Test>` does not have the `copy` ability
   ┌─ tests/cmp-rewrite/legal-examples-lang-v2.2/cmp_limited_ability.move:33:13
   │
33 │         if (x==y)
   │             ^ copy needed here because value is still in use
34 │             x
   │             - used here

error: local `y` of type `vector<Test>` does not have the `copy` ability
   ┌─ tests/cmp-rewrite/legal-examples-lang-v2.2/cmp_limited_ability.move:33:13
   │
33 │         if (x==y)
   │             ^^^^ copy needed here because value is still in use
   ·
36 │             y
   │             - used here
